--- a/index.html
+++ b/index.html
@@ -1,72 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
+<head>
+    <!--THIS IS A COMMENT!!!-->
+    <title>MA1800 DEMO!</title>
+</head>
+<body>
+    <h1>Hello World!!!</h1>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <h2>Secondary Header</h2>
+    <h6>Tiny Text</h6>
 
-    <!--
-      This is the page head - it contains info the browser uses
-      Like the title, which appears on the browser tab but not inside the page
-      Further down you'll see the content that displays in the page
-    -->
-    <title>Hello World!</title>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac lacus tellus. Morbi vehicula laoreet orci nec molestie. Nullam eu egestas urna. Vestibulum elementum non enim et interdum. Quisque cursus, nunc vitae feugiat interdum, purus purus sodales diam, et tempus ligula ex quis leo. Phasellus mollis nunc massa. Proin nec nisl accumsan, elementum enim in, scelerisque est. Fusce laoreet maximus lorem sit amet accumsan. Pellentesque pulvinar maximus euismod. Nam in elit lorem. Sed faucibus ut ex et aliquet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum aliquam, lectus tempus cursus congue, augue velit egestas eros, faucibus dapibus risus sem vitae erat. Aliquam vestibulum enim a tortor ultricies egestas. Nulla facilisi. Vivamus vel viverra dui.    
+    </p>
 
-    <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
-
-    <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
-  </head>
-  <body>
-    <!--
-      The body includes the content you see in the page
-      Each element is defined using tags, like this <div></div>
-      The attributes like class="wrapper" let us style elements in the CSS
-    -->
-    <div class="wrapper">
-      <div class="content" role="main">
-        <h1 class="title">Hello World!</h1>
-        <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
-          class="illustration"
-          alt="Editor illustration"
-          title="Click the image!"
-        />
-        <div class="instructions">
-          <h2>Using this project</h2>
-          <p>
-            This is the Glitch <strong>Hello Website</strong> project. You can
-            use it to build your own site. Check out the code in the editor and open
-            the <span class="fileopener" data-file="TODO.md" data-line="0"
-              >TODO</span> for next steps!
-          </p>
-          <!--  🚧 TODO: ADD BUTTON HERE -->
-
-          <!-- Once you've added the button from TODO.md, click it in the page -->
-          <!-- Check out the function in script.js to see how it works -->
-        </div>
-      </div>
-    </div>
-    <!-- The footer holds our remix button — you can keep or delete it ✂ -->
-    <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
-    </footer>
-  </body>
-</html>
+    <p>
+        This is <b>bold text.</b> 
+        This is <i>emphasised text.</i> 
+        This is <u>underlined text.</u> <br>
+        This is a <a href="goodbyeworld.html">hyperlink.</a>
+        This is <a href="https://en.wikipedia.org/wiki/Ted_Nelson">Ted</a>.
+    </p>
+</body>
