🕹🚒 Checkpoint ./index.html:50003278/62

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
+<html>
+
 <head>
+  
     <!--THIS IS A COMMENT!!!-->
     <title>MA1800 DEMO!</title>
+  
+  
+  
 </head>
+  
+  
+  
 <body>
+  
     <h1>Hello World!!!</h1>
 
     <h2>Secondary Header</h2>
@@ -21,3 +31,5 @@
         This is <a href="https://en.wikipedia.org/wiki/Ted_Nelson">Ted</a>.
     </p>
 </body>
+
+  </html>
